# EviTrace

./: .directory  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _verify_paths.py  api_client.py  config.py  config.yaml  conftest.py  extract_to_csv.py  extraction_map.json  extraction_map.py  extraction_report.py  main.py  manifest.json  manifest.py  orchestrator.py  pdf_extractor.py  pdf_processor.py  pipeline.py  prompts.py  pyproject.toml  qc_report.py  requirements.txt  run_tests_33.py  test_grobid.py  test_pdf.py  validator.py
.kiro/hooks/: atomic-git-commit-assistant.kiro.hook  auto-organize-specs.kiro.hook  auto-stage-all-changes.kiro.hook
.kiro/specs/: refactor.md
.kiro/steering/: changelog-rules.md  config.md  product.md  roadmap.md  structure.md  tech.md  testing.md
agents/: README.md  validator.py
agents/openai/: README.md  api_client.py  prompts.py
artifact_generation/: README.md  __init__.py  canonical.py  csv_exporter.py  extraction_artifact.py  w3c_annotation.py
config/: config.yaml
configs/: README.md  agent_schema.json  config.yaml  extraction_map.json  final_output_schema.json  structure_schema.json
numpy/: __init__.py
pdf2image/: __init__.py
pdf_extractor/: README.md  __init__.py  cli.py  config.yaml  conftest.py  extraction_pipeline.py  layout_utils.py  next steps.txt  pdf_extractor.py  pdf_validator.py  pyproject.toml  requirements.txt
pdf_extractor/annotation/: __init__.py  artifact_generator.py  w3c_annotation.py
pdf_extractor/extraction/: GROBID.py  (+8 more)
pipeline/: README.md  __init__.py  evidence_index.py  extraction_map.py  extraction_pipeline.py  extraction_report.py  orchestrator.py  pdf_processor.py  validator.py
quality_control/: README.md  __init__.py  iaa_calculator.py  local_metrics.py  models.py  quality_control.py  rater.py  reconciler.py  structure_validator.py  validate_context.py
specs/: risk-mediation.md
tests/: README.md  test_csv_exporter.py  test_dependency_directions.py  test_migration_artifact_scrub_bug_condition.py  test_migration_artifact_scrub_preservation.py  test_no_runtime_pip.py
text_processing/: __init__.py  base.py  composite.py  embedding.py  matchers.py  normalizers.py  tokenizers.py
utils/: README.md  config_utils.py  grobid_manager.py  logging_utils.py  path_utils.py  text_processor.py
(+388 files in other folders)
