[project]
name = "evitrace"
version = "0.1.0"
requires-python = "3.12"
dependencies = [
    "gdown>=5.1.0",
    "PyMuPDF>=1.24.0",
    "numpy>=1.24.0,<2.0.0",
    "PyYAML>=6.0",
    "pdfplumber>=0.10.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "scispacy==0.5.5",
    "spacy>=3.7.0,<3.8.0",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--import-mode=importlib -m \"not slow\""
markers = [
    "slow: marks tests as slow (deselected by default; run with -m slow or -m \"\")",
]
